2005-12-31  Brian Ripley  <Brian.Ripley@r-project.org>

	* DESCRIPTION: Version is 3.1-68.
	* src/init.c: new file to register symbols
	* R/corStruct.R: corrected one use of PACKAGE="base"
	* R/lmList.R: remove attempted use of 'frame = 1'

2005-12-09  Deepayan Sarkar  <deepayan@stat.wisc.edu>

	* R/newMethods.R, R/groupedData.R: fix for problem described in
	https://stat.ethz.ch/pipermail/r-help/2005-December/082890.html
	(superpose.line/symbol components were being truncated to length
	of an arbitrary component).


2005-12-09  Brian Ripley  <Brian.Ripley@r-project.org>

	* DESCRIPTION: Version is 3.1-67.
	* R/gls.R: Replace do.call by eval.parent on massaged call.
	* po/fr.R, po/R-fr.R, inst/po: add French translation by
	Philippe Grosjean and automated en@quot translation.

2005-08-25  Douglas Bates  <bates@stat.wisc.edu>

	* R/gls.R: Added option "optimMethod" to gls, gnls, and lme.

2005-08-24  Douglas Bates  <bates@wisc.edu>

	* R/lme.R (print.intervals.lme): Replace calls to print.matrix by
	print(as.matrix()).

2005-07-25  Douglas Bates  <bates@bates1-home>

	* inst/scripts/ch08.R: Cleaned up examples in ch04, ch06, ch08.

	* src/matrix.h: Include R_Ext/Linpack.h in addition to R_Ext/Applic.h

2005-07-19  Douglas Bates  <bates@stat.wisc.edu>

	* R/gnls.R: Added definition of convIter when using nlminb or when
	using optim.  Reindented this and other R source files.

2005-07-12  Douglas Bates  <bates@bates1-home>

	* inst/scripts/ch01.R: Clean up and check these scripts

	* src/nlmefit.c (gls_loglik): re-write contributed by ?? (I
	accidently deleted the email message).

	* R/lme.R (lme.formula): Use nlminb if available.
	

2005-06-08  Douglas Bates  <bates@bates1-home>

	* R/lme.R (predict.lme): Fixed bug when using a name for a formula
	in original fit. (Reported by Arne.Mueller@sanofi-aventis.com)

2005-05-20  Douglas Bates  <bates@bates1-home>

	* man/contr.SAS.Rd: Removed

2005-04-04  Douglas Bates  <bates@bates1-home>
