@@ -1,6 +1,6 @@
 Package: nlme
-Version: 3.1-68
-Date: 2005-12-30
+Version: 3.1-68.1
+Date: 2006-01-05
 Priority: recommended
 Title: Linear and nonlinear mixed effects models
 Author: Jose Pinheiro <Jose.Pinheiro@pharma.novartis.com>,
@@ -14,4 +14,4 @@ Imports: lattice
 LazyLoad: yes
 LazyData: yes
 License: GPL version 2 or later
-Packaged: Mon Jan  2 13:30:43 2006; ripley
+Packaged: Thu Jan  5 09:47:51 2006; ripley
