@@ -1,3 +1,8 @@
+2006-01-05  Brian Ripley  <Brian.Ripley@r-project.org>
+
+	* src/init.c: missing registration for ARMA_constCoef
+	* inst/scripts/ch02.R: correct argument names in simulate.lme call
+
 2005-12-31  Brian Ripley  <Brian.Ripley@r-project.org>
 
 	* DESCRIPTION: Version is 3.1-68.
